# protecton_defender

./: Ana Düşünce.md  Anormal Trafik Tespiti.md  Ağ Trafiğini Dinleme.md  CMakeLists.txt  Engelleme Mekanizması.md  README.md  build.sh  main.c  protecton_logo.psd
English/: Abnormal Traffic Detection.md  Blocking Mechanism.md  Listenin Network Traffic.md  Main Throught.md
include/network/: blocker.h  detector.h  listener.h
network/: CMakeLists.txt  blocker.c  detector.c  listener.c
network/definitions/: headers.h
